css/style.css
/* SETUP */

/* vars */

:root {
  /* color palete */
  --clr1: #ff7f00;
  --clr2: #ffffff;
  --clr3: #040a2c;
  --clr4: #e3e3e3;
  --clr5: #000000;
}

/* typography  */

@font-face {
  font-family: montserrat;
  src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
}

@font-face {
  font-family: montserrat-thin;
  src: url(../fonts/Montserrat/Montserrat-Thin.ttf);
}

@font-face {
  font-family: montserrat-bold;
  src: url(../fonts/Montserrat/Montserrat-Bold.ttf);
}

/* BASICS */

/* base */

* {
  box-sizing: border-box;
}

html {
  font-family: montserrat, sans-serif;
  color: var(--clr1);
}

body {
  margin: 0;
  font-size: 1.1875rem;
}

img {
  width: 100%;
}

a {
  color: var(--clr2);
  text-decoration: none;
}

li {
  transition: 0.2s;
}

/* layout */

.main-layout > *:not(.full) {
  margin-inline-start: 1rem;
  margin-inline-end: 1rem;
}

/* helpers */

/* flex helpers */

.flex {
  display: flex;
}

.flex.space-between {
  justify-content: space-between;
}

.flex.align-center {
  align-items: center;
}

.flex.justify-center {
  justify-content: center;
}

.flex.flex-column {
  flex-direction: column;
}

/* grid helpers */

.grid {
  display: grid;
}

/* list helpers */

.clean-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

/* COMPONENTS */

/* main header */

.main-header {
  min-height: 66px;
  background-color: var(--clr1);
}

.main-header .logo > img {
  width: 133px;
  margin-inline-start: 1rem;
}

.main-header .main-nav-list > li {
  color: var(--clr2);
  margin-inline-end: 1rem;
  margin: 1rem;
  text-align: center;
}

.main-header .main-nav-list > li:hover {
  color: var(--clr3);
  cursor: pointer;
}

.main-header .main-nav-list > li:hover a {
  color: var(--clr3);
}

/* editor section */

.editor-section {
  display: none;
  background-color: var(--clr4);
  min-height: 600px;
}

.editor-section > canvas {
  max-width: 600px;
  margin-inline-start: 2rem;
}

.editor-section .actions {
  height: 450px;
  max-width: 300px;
  margin-inline-end: 30px;
}

.editor-section .action-btn {
  height: 50px;
  width: 50px;
  background-color: var(--clr2);
  border: none;
  border-radius: 0.75rem;
}

.editor-section .action-btn > i {
  font-size: 30px;
}

.editor-section .action-btn:hover {
  cursor: pointer;
}

.editor-section .action-img {
  width: 30px;
  height: 30px;
}

.editor-section .text-actions-container {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(2, 1fr);
  margin-block-end: 43px;
  justify-items: center;
  align-items: center;
  grid-template-areas:
    'text-input text-input text-input text-input text-input'
    '. switch-btn add-btn trash-btn .';
}

.editor-section .text-actions-container .text-input {
  width: 300px;
  height: 40px;
  border: none;
  border-radius: 0.75rem;
  text-indent: 1rem;
  grid-area: text-input;
}

.editor-section .text-actions-container .switch-btn {
  grid-area: switch-btn;
}

.editor-section .text-actions-container .add-btn {
  grid-area: add-btn;
}

.editor-section .text-actions-container .trash-btn {
  grid-area: trash-btn;
}

.editor-section .text-sizing-container {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(2, 1fr);
  margin-block-end: 20px;
  gap: 10px;
  justify-items: center;
  align-items: center;
  grid-template-areas:
    'increase-btn decrease-btn align-left-btn align-center-btn align-right-btn'
    'fonts-select fonts-select line-up-btn line-down-btn input-text-color';
}

.editor-section .text-sizing-container .increase-btn {
  grid-area: increase-btn;
}

.editor-section .text-sizing-container .decrease-btn {
  grid-area: decrease-btn;
}

.editor-section .text-sizing-container .align-left-btn {
  grid-area: align-left-btn;
}

.editor-section .text-sizing-container .align-center-btn {
  grid-area: align-center-btn;
}

.editor-section .text-sizing-container .align-right-btn {
  grid-area: align-right-btn;
}

.editor-section .text-sizing-container .fonts-select {
  grid-area: fonts-select;
  height: 50px;
  border: none;
  border-radius: 0.75rem;
  width: 110px;
}

.editor-section .text-sizing-container .line-up-btn {
  grid-area: line-up-btn;
}

.editor-section .text-sizing-container .line-down-btn {
  grid-area: line-down-btn;
}

/* Color input inside a div with opacity 0 */
.editor-section .text-sizing-container .input-text-color {
  grid-area: input-text-color;
  position: relative;
  border-radius: 0.75rem;
  border: none;
  height: 50px;
  width: 50px;
  background-color: var(--clr2);
}

.editor-section .text-sizing-container .input-text-color .color-input {
  opacity: 0;
  position: absolute;
  left: 3px;
  top: 3px;
  /* z-index: 1; */
  cursor: pointer;
  width: 45px;
  height: 45px;
  border-radius: 6px;
}

.editor-section .text-sizing-container .input-text-color img {
  width: 30px;
  height: 30px;
}
/* END OF Color input inside a div with opacity 0 */

.share-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 60px;
  grid-template-areas: 'download-btn share-btn';
}

.share-container .download-share-btn {
  width: 120px;
  height: 60px;
  border: none;
  border-radius: 0.75rem;
  background-color: var(--clr1);
  color: var(--clr2);
  font-family: montserrat;
}

.share-container .download-share-btn:hover {
  cursor: pointer;
}

.download-btn {
  grid-area: download-btn;
}

.share-btn {
  grid-area: share-btn;
}

/* gallery section */

.gallery-section {
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 10px;
  background-color: var(--clr4);
  padding: 20px;
}

.gallery-section > img {
  cursor: pointer;
  border-radius: 20px;
}

/* about */

.about-section {
  min-height: 400px;
  flex-direction: column;
}

.about-section .about-img {
  width: 150px;
  height: 150px;
  object-fit: cover;
  border-radius: 50%;
  margin-block-start: 1rem;
  margin-block-end: 0.5rem;
}

.about-section .about-info {
  color: var(--clr5);
}

.about-section .about-info h2 {
  font-family: montserrat-bold;
  color: var(--clr1);
  font-size: 1.375rem;
  text-align: center;
}

.about-section .about-info p {
  font-size: 0.9375rem;
  text-align: center;
  width: 300px;
}

.about-section .about-info ul {
  justify-content: center;
}

.about-section .about-info ul > li {
  height: 39px;
  width: 39px;
  background-color: var(--clr1);
  border-radius: 0.75rem;
  margin-inline-end: 9px;
}

.about-section .about-info li i {
  font-size: 1.5rem;
}

/* footer */

.main-footer {
  min-height: 207px;
  background-color: var(--clr1);
}

.main-footer .footer-logo > img {
  width: 200px;
  margin-inline-start: 1rem;
}

.main-footer .footer-copyrights {
  font-family: montserrat-thin;
  color: var(--clr2);
}

/* Media Queries */

/* MOBILE ONLY */

@media (max-width: 800px) {
  /* Header */
  .main-header .main-nav-list {
    position: absolute;
    left: 0;
    background-color: var(--clr1);
    flex-direction: column;
    width: 100%;
    overflow: hidden;
    max-height: 0;
    top: 66px;
    transition: max-height 0.6s;
  }

  /* HAMBURGER MENU */
  .main-header .hamburger:hover {
    cursor: pointer;
  }

  .main-header .hamburger > div {
    width: 35px;
    height: 5px;
    background-color: var(--clr2);
    margin: 6px;
    transition: 0.5s;
  }

  .main-header .main-nav-list.mobile-menu-height {
    max-height: 100%;
  }

  .change .bar1 {
    transform: rotate(-45deg) translate(-9px, 6px);
  }

  .change .bar2 {
    opacity: 0;
  }

  .change .bar3 {
    transform: rotate(45deg) translate(-8px, -8px);
  }
}

/* MEDIUM */

@media (min-width: 800px) {
  .main-layout > *:not(.full) {
    max-width: 800px;
    margin-inline-start: auto;
    margin-inline-end: auto;
  }

  /* About */

  .about-section {
    flex-direction: row;
  }

  .about-section .about-img {
    width: 300px;
    height: 300px;
    margin-inline-start: 1.5rem;
    margin-inline-end: 2rem;
    margin-block-start: 0;
    margin-block-end: 0;
  }

  .about-section .about-info h2 {
    font-family: montserrat-bold;
    color: var(--clr5);
    font-size: 1.5625rem;
    text-align: left;
  }

  .about-section .about-info p {
    font-size: 1.25rem;
    text-align: left;
    width: 100%;
  }

  .about-section .about-info ul {
    justify-content: left;
  }

  .main-header .hamburger {
    display: none;
  }
}

/* LARGE */

@media (min-width: 1060px) {
  .main-layout > *:not(.full) {
    max-width: 1200px;
  }
}

